--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -1,20 +1,27 @@
 
 
 
-- title: Awe-inspiring South African road trip
-  location: Cape Town, Winelands & the Garden Route with optional game lodge
-  description: An incredible South Africa road trip along the Garden Route
-  price: 1299
-  was-price: 1799
-  price-description: per person for 10 nights
-  link: https://www.secretescapes.com/splendours-of-the-garden-route-south-africa-cape-town-south-africa/sale?utm_source=SE_MEDIA&utm_medium=hub&utm_campaign=SouthAfrica_Feb2018
+- title: South Africa safari holiday with game drives & excursions
+  location: Manyatta Rock Camp, Kwa Madwala
+  description: Game drives and a rustic-chic lodge in South Africa
+  price: 1499
+  price-description:  per person for 5 nights
+  link: https://www.secretescapes.com/south-africa-safari-holiday-with-game-drives-and-excursions-manyatta-rock-camp-kwa-madwala/sale?utm_source=microsite&utm_medium=SE_media&utm_campaign=SouthAfrica_Feb2018
 
 
 
-- title: Incredible tour of Namibia's natural wonders
-  location: Windhoek, Swakopmund, Damaraland & Etosha National Park
-  description: Combine Namibia's best city, coast and safari experiences
-  price: 2399
-  was-price: 3299
-  price-description: per person for 8 nights
-  link: https://www.secretescapes.com/tour-of-namibias-natural-wonders-city-stays-desert-adventures-scenic-safaris-and-more/sale?utm_source=SE_MEDIA&utm_medium=hub&utm_campaign=SouthAfrica_Feb2018
+- title: Superb South Africa break with England vs South Africa rugby match tickets
+  location: Hotels in Johannesburg & Cape Town
+  description: A Joburg or Cape Town holiday with England vs South Africa rugby tickets
+  price: 1699
+  price-description:  per person for 7 nights
+  link: https://www.secretescapes.com/superb-south-africa-break-with-rugby-match-tickets-includes-a-choice-of-hotels-in-johannesburg-and-cape-town/sale?utm_source=microsite&utm_medium=SE_media&utm_campaign=SouthAfrica_Feb2018
+
+
+
+- title: Epic tour of south western Africa's natural wonders
+  location: Namibia, Zambezi & Victoria Falls
+  description: Explore south western Africa with this awe-inspiring tour
+  price: 2999
+  price-description:  per person for 9 nights
+  link: https://www.secretescapes.com/epic-tour-of-south-western-africas-natural-wonders-namibia-zambezi-and-victoria-falls/sale?utm_source=microsite&utm_medium=SE_media&utm_campaign=SouthAfrica_Feb2018
