--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -1,49 +1,24 @@
-- title: Spectacular Oslo & Bergen break with optional fjord tour
-  id: spectacular-oslo-bergen-break-with-optional-fjord-tour
-  location: Scandic St. Olavs plass & Clarion Hotel Admiral, Norway
-  description: A fantastic four-night trip to Norway's Oslo and Bergen, with one of the world's most scenic train journeys between the two cities - including flights and an optional fjord tour
-  price: 459
-  price-description: per person for 4 nights
-  saved: 37
-  expires: 2018/04/14
-  link: https://www.secretescapes.com/spectacular-oslo-and-bergen-break-with-optional-fjord-tour-scandic-st-olavs-plass-and-clarion-hotel-admiral-norway-2/sale?gce_urg=0&utm_source=SE&utm_campaign=7_Norway_201703&utm_medium=Hub
 
-- title: Farris Bad
-  id: farris-bad
-  location: Larvik, Norway
-  description: Upscale beachfront stay at the first Nordic balneological health resort, with a supersized spa
-  price: 214
-  price-description: per room per night
-  saved: 33
-  expires: 2018/04/20
-  link: https://www.secretescapes.com/farris-bad-larvik-norway/sale?gce_urg=1&gce_scp=0&utm_source=SE&utm_medium=Hub&utm_campaign=12_Norway_201703
 
-- title: First Hotel Marin
-  id: first-hotel-marin
-  location: Bergen, Norway
-  description: A unique stay in the centre of picturesque Bergen, just a stone's throw from the harbour
-  price: 48
-  price-description: per room per night
-  saved: 43
-  expires: 2018/04/20
-  link: https://www.secretescapes.com/first-hotel-marin-bergen-norway/sale?gce_scp=1&utm_source=SE&utm_medium=Hub&utm_campaign=13_Norway_201704
 
-- title: Magic Hotel
-  id: magic-hotel
-  location: Bergen, Norway
-  description: A brand-new hip hotel in the centre of Bergen, designed by a top New York designer
-  price: 73
-  price-description: per room per night
-  saved: 55
-  expires: 2018/04/20
-  link: https://www.secretescapes.com/magic-hotel-bergen-norway/sale?gce_hpf=1&utm_source=SE&utm_medium=Hub&utm_campaign=14_Norway_201704
+- title: South Africa safari holiday with game drives & excursions
+  id: south-africa-safari-holiday-with-game-drives-excursions
+  location: Manyatta Rock Camp, Kwa Madwala
+  description: Game drives and a rustic-chic lodge in South Africa
+  price: 1499
+  price-description:  per person for 5 nights
+  saved: 38
+  expires: 2018/03/20
+  link: https://www.secretescapes.com/south-africa-safari-holiday-with-game-drives-and-excursions-manyatta-rock-camp-kwa-madwala/sale?utm_source=microsite&utm_medium=SE_media&utm_campaign=SouthAfrica_Mar2018
 
-- title: Sola Strand Hotel
-  id: sola-strand-hotel
-  location: Sola, Norway
-  description: Discover one of the world's sixth best beaches on Norway's gorgeous coast, with breakfast and more
-  price: 79
-  price-description: per room per night
-  saved: 47
-  expires: 2018/04/20
-  link: https://www.secretescapes.com/sola-strand-hotel-sola-norway/sale?gce_hpf=1&utm_source=SE&utm_medium=Hub&utm_campaign=15_Norway_201704
+
+
+- title: Epic tour of south western Africa's natural wonders
+  id: epic-tour-of-south-western-africa-s-natural-wonders
+  location: Namibia, Zambezi & Victoria Falls
+  description: Explore south western Africa with this awe-inspiring tour
+  price: 2799
+  price-description:  per person for 9 nights
+  saved: 25
+  expires: 2018/03/20
+  link: https://www.secretescapes.com/epic-tour-of-south-western-africas-natural-wonders-namibia-zambezi-and-victoria-falls/sale?utm_source=microsite&utm_medium=SE_media&utm_campaign=SouthAfrica_Mar2018
