final images. offer update. push live

--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -13,12 +13,36 @@
 
 
 
-- title: Epic tour of south western Africa's natural wonders
-  id: epic-tour-of-south-western-africa-s-natural-wonders
-  location: Namibia, Zambezi & Victoria Falls
-  description: Explore south western Africa with this awe-inspiring tour
-  price: 2799
+- title: Spellbinding South Africa self-drive holiday with safari stay
+  id: spellbinding-south-africa-self-drive-holiday-with-safari-stay
+  location: Johannesburg, KwaZulu-Natal, Durban & optional Cape Town
+  description: Stunning scenery and a chance to spot the 'Big Five' on a self-drive South Africa jaunt
+  price: 1839
   price-description:  per person for 9 nights
-  saved: 25
+  saved: 20
   expires: 2018/03/20
-  link: https://www.secretescapes.com/epic-tour-of-south-western-africas-natural-wonders-namibia-zambezi-and-victoria-falls/sale?utm_source=microsite&utm_medium=SE_media&utm_campaign=SouthAfrica_Mar2018
+  link: https://www.secretescapes.com/spellbinding-south-africa-self-drive-holiday-johannesburg-kwazulu-natal-durban-and-optional-cape-town/sale?utm_source=microsite&utm_medium=SE_media&utm_campaign=SouthAfrica_March2018
+
+
+
+- title: Amazing South Africa safari adventure with optional beach stay
+  id: amazing-south-africa-safari-adventure-with-optional-beach-stay
+  location: Two safari stays in Kruger National Park & optional Durban
+  description: Wildlife-gazing on a South African safari adventure
+  price: 1999
+  price-description:  per person for 6 nights
+  saved: 23
+  expires: 2018/03/20
+  link: https://www.secretescapes.com/amazing-south-africa-safari-adventure-with-optional-beach-stay-two-safari-stays-in-kruger-national-park-and-optional-durban/sale?utm_source=microsite&utm_medium=SE_media&utm_campaign=SouthAfrica_March2018
+
+
+
+- title: Romantic South Africa escape with a lion safari
+  id: romantic-south-africa-escape-with-a-lion-safari
+  location: Welgelegen Manor, near Johannesburg
+  description: A handsome five-star country manor outside Jo’burg
+  price: 1399
+  price-description:  per person for 5 nights
+  saved: 44
+  expires: 2018/03/20
+  link: https://www.secretescapes.com/romantic-south-africa-escape-with-a-lion-safari-welgelegen-manor-near-johannesburg/sale?utm_source=microsite&utm_medium=SE_media&utm_campaign=SouthAfrica_March2018
