--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -1,29 +1,36 @@
-- title: eKhaya Bush Lodge
-  id: e-khaya-bush-lodge
-  location: Hoedspruit, South Africa
-  description: Boutique safari lodge a stone’s throw from Kruger National Park
-  price: 323
-  price-description: per room per night
-  saved: 25
-  expires: 2018/04/04
-  link: https://www.secretescapes.com/ekhaya-bush-lodge-hoedspruit-south-africa/sale?utm_source=microsite&utm_medium=SE_media&utm_campaign=SouthAfrica_March2018
 
-- title: Incredible self-drive South Africa safari-hopping holiday
-  id: incredible-self-drive-south-africa-safari-hopping-holiday
-  location: Kruger National Park, Limpopo & Pretoria
-  description: A safari sensation on a bucket-list self-drive South Africa holiday
+
+
+- title: Incredible South Africa safari holiday
+  id: incredible-south-africa-safari-holiday
+  location: Entabeni Private Game Reserve, Limpopo
+  description: An epic safari stay with daily game drives in South Africa's bush
   price: 1299
-  price-description: per person for 7 nights
-  saved: 25
-  expires: 2018/04/04
-  link: https://www.secretescapes.com/incredible-self-drive-south-africa-safari-hopping-holiday-luxury-safari-and-nature-retreats/sale?utm_source=microsite&utm_medium=SE_media&utm_campaign=South%20Africa_March2018
-
-- title: Sublime South Africa safari lodge stay
-  id: sublime-south-africa-safari-lodge-stay
-  location: Entabeni Safari Conservancy, Limpopo
-  description: An epic safari stay in South Africa's beautiful bushveld
-  price: 183
-  price-description: per lodge per night
+  price-description: per person for 5 nights
   saved: 52
-  expires: 2018/04/06
-  link: https://www.secretescapes.com/entabeni-safari-conservancy-limpopo-south-africa/sale?utm_source=microsite&utm_medium=SE_media&utm_campaign=South%20Africa_March2018
+  expires: 2018/04/17
+  link: https://www.secretescapes.com/incredible-south-africa-safari-holiday-entabeni-private-game-reserve-limpopo/sale?utm_source=microsite&utm_medium=SE_media&utm_campaign=SouthAfrica_April2018
+
+
+
+- title: Epic South Africa self-drive adventure with a full day game drive
+  id: epic-south-africa-self-drive
+  location: Cape Town, the Garden Route, Addo Elephant National Park & more
+  description: An unforgettable tour of South Africa’s Garden Route
+  price: 1499
+  price-description: per person for 12 nights
+  saved: 35
+  expires: 2018/04/17
+  link: https://www.secretescapes.com/epic-south-africa-self-drive-adventure-with-a-game-drive-cape-town-the-garden-route-addo-elephant-national-park-and-more/sale?utm_source=microsite&utm_medium=SE_media&utm_campaign=SouthAfrica_April2018
+
+
+
+- title: South Africa safari & Mauritius holiday with optional Dubai stay
+  id: south-africa-safari-mauritius-holiday-with-optional-dubai-stay
+  location: Cape Town, Kruger, Johannesburg, South Africa & Merville Beach, Mauritius
+  description: Game drives in South Africa, plus Mauritius downtime and optional Dubai
+  price: 2799
+  price-description: per person for 14 nights
+  saved: 23
+  expires: 2018/04/10
+  link: https://www.secretescapes.com/south-africa-city-and-safari-mauritius-bliss-and-optional-dubai-cape-town-kruger-johannesburg-south-africa-and-merville-beach-mauritius/sale?utm_source=microsite&utm_medium=SE_media&utm_campaign=SouthAfrica_April2018
